bookinfo-exp/virtual-service-reviews-test-v2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reviews
spec:
  hosts:
    - reviews
  http:
  - match:
    - headers:
        end-user:
          exact: jason
    route:
    - destination:
        host: reviews
        subset: v2
  - route:    ####################这个route和上面的route层级不同，上面的是http match中的子集。即匹配到了jason则流入v2版本。反之为vi版本。
    - destination:
        host: reviews
        subset: v1
